// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useCheckout should render in error state 1`] = `
<div>
  <span
    data-test="checkout-error"
  >
    Error: Checkout with error
  </span>
</div>
`;

exports[`useCheckout should render in loading state 1`] = `
<div>
  <span
    data-test="checkout-loading"
  >
    yes
  </span>
</div>
`;
